--- a/index.html
+++ b/index.html
@@ -56,16 +56,18 @@
         <a href="#"><i class="fab fa-twitter"></i></a>
         </div>
     </div>
-    <!-- <div class="footer-right">
-        <div class="contact-card">
-        <i class="fab fa-dribbble"></i>
-        <div><a href="#">dribbble.com/example</a></div>
-    </div> -->
+ <div class="footer-right">
+  <div>
+    <p class="signature-container">powered by <a href="https://mitechsolutions.co.za">MiTechSolutions (Pty) Ltd</a></p>
+  </div>
     <div class="contact-card">
       <i class="fas fa-envelope"></i>
       <div><a href="mailto:contactsecretsocietystreet@gmail.com">contactsecretsocietystreet@gmail.com</a></div>
+      <i class='fa-brands fa-whatsapp'></i>
+      <div><a href=https://wa.me/27674020405>+27 123 4567</a></div>
     </div>
   </div>
+
 
     <script>
         var countDownDate = new Date("Oct 1, 2025 00:00:00").getTime();
