--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         </div>
     </div>
  <div class="footer-right">
-  <div>
+ <!-- <div>
     <p class="signature-container">powered by <a href="https://mitechsolutions.co.za">MiTechSolutions (Pty) Ltd</a></p>
-  </div>
+  </div>-->
     <div class="contact-card">
       <i class="fas fa-envelope"></i>
       <div><a href="mailto:contactsecretsocietystreet@gmail.com">contactsecretsocietystreet@gmail.com</a></div>
